--- a/app/src/main/res/layout/fragment_dompet.xml
+++ b/app/src/main/res/layout/fragment_dompet.xml
@@ -191,7 +191,7 @@
         android:textColor="#FF000000"
         android:textSize="16dp" />
 
-    <FrameLayout
+    <ScrollView
         android:layout_width="352dp"
         android:layout_height="235dp"
         android:layout_marginTop="271dp"
@@ -202,7 +202,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" />
 
-    </FrameLayout>
+    </ScrollView>
 
     <ImageView
         android:layout_width="58dp"
@@ -240,7 +240,7 @@
         android:textColor="#FF000000"
         android:textSize="16dp" />
 
-    <FrameLayout
+    <ScrollView
         android:layout_width="352dp"
         android:layout_height="120dp"
         android:layout_marginBottom="250dp"
@@ -251,5 +251,5 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
-    </FrameLayout>
+    </ScrollView>
 </FrameLayout>
