--- a/app/src/main/res/layout/activity_popupcatatantabungan.xml
+++ b/app/src/main/res/layout/activity_popupcatatantabungan.xml
@@ -83,15 +83,32 @@
         android:textColor="#FF000000"
         android:textSize="13sp" />
 
+    <EditText
+        android:id="@+id/edit_maximal_tabungan"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="240dp"
+        android:layout_gravity="top|left"
+        android:gravity="left|center_vertical"
+        android:hint="Maximal Tabungan"
+        android:inputType="number"
+        android:background="@drawable/image_rectangle33b"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textColor="#FF000000"
+        android:textSize="13sp" />
+
+
 
 
     <ImageView
         android:id="@+id/image_vector5"
         android:layout_width="23.62dp"
         android:layout_height="23.62dp"
-        android:layout_marginLeft="310dp"
-        android:layout_marginRight="53.38dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginLeft="270dp"
+        android:layout_marginRight="50.38dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="687.38dp"
         android:scaleType="centerInside"
         android:src="@drawable/image_vector5" />
@@ -100,8 +117,8 @@
         android:id="@+id/image_rectangle5"
         android:layout_width="78dp"
         android:layout_height="30dp"
-        android:layout_marginLeft="91dp"
-        android:layout_marginTop="240dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="300dp"
         android:text="Button"
         android:layout_gravity="top|center_horizontal"
         android:background="@drawable/image_rectangle66c"
@@ -111,8 +128,8 @@
         android:id="@+id/text_buat"
         android:layout_width="wrap_content"
         android:layout_height="16dp"
-        android:layout_marginLeft="90.5dp"
-        android:layout_marginTop="245.5dp"
+        android:layout_marginLeft="70.5dp"
+        android:layout_marginTop="305.5dp"
         android:layout_marginBottom="-0.5dp"
         android:layout_gravity="center_horizontal"
         android:gravity="left|center_vertical"
@@ -127,8 +144,8 @@
         android:id="@+id/image_rectangle6"
         android:layout_width="128dp"
         android:layout_height="36dp"
-        android:layout_marginRight="67dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginRight="80dp"
+        android:layout_marginTop="50dp"
         android:layout_gravity="top|center_horizontal"
         android:background="@drawable/image_rectangle66c"
         android:scaleType="centerInside" />
@@ -137,8 +154,8 @@
         android:id="@+id/image_rectangle7"
         android:layout_width="128dp"
         android:layout_height="36dp"
-        android:layout_marginLeft="68dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="50dp"
         android:layout_gravity="top|center_horizontal"
         android:background="@drawable/image_rectangle7"
         android:scaleType="centerInside" />
@@ -147,8 +164,8 @@
         android:id="@+id/text_catatan"
         android:layout_width="wrap_content"
         android:layout_height="16dp"
-        android:layout_marginRight="67dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginRight="75dp"
+        android:layout_marginTop="60dp"
         android:layout_marginBottom="-0.5dp"
         android:layout_gravity="center_horizontal"
         android:gravity="left|center_vertical"
@@ -164,7 +181,7 @@
         android:layout_width="wrap_content"
         android:layout_height="16dp"
         android:layout_marginLeft="67.5dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="60dp"
         android:layout_marginBottom="-0.5dp"
         android:layout_gravity="center_horizontal"
         android:gravity="left|center_vertical"
