--- a/app/src/main/res/layout/activity_pop_up_progress_tabungan.xml
+++ b/app/src/main/res/layout/activity_pop_up_progress_tabungan.xml
@@ -72,10 +72,10 @@
                 android:id="@+id/progressBar"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:progress="23"
+                android:layout_height="29dp"
                 android:max="100"
-                android:progressDrawable="@drawable/custom_progress_bar"/>
+                android:progress="23"
+                android:progressDrawable="@drawable/baruloading" />
 
             <LinearLayout
                 android:layout_width="match_parent"
