--- a/app/src/main/res/layout/activity_halaman_liat_tabungan.xml
+++ b/app/src/main/res/layout/activity_halaman_liat_tabungan.xml
@@ -8,15 +8,14 @@
     android:layout_height="match_parent"
     tools:context=".HalamanLiatTabungan">
 
-    <TextView
-        android:id="@+id/dataTextView"
+    <LinearLayout
+        android:id="@+id/dataLinearLayout"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:padding="16dp"
-        android:textSize="16sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
