--- a/app/src/main/res/layout/activity_emas.xml
+++ b/app/src/main/res/layout/activity_emas.xml
@@ -67,9 +67,9 @@
         android:id="@+id/recommendation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/box_background"
-        android:text="rekomendasi"
+        android:text=""
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/lineChart"
         app:layout_constraintStart_toStartOf="parent"
