--- a/app/src/main/res/layout/item_catatan.xml
+++ b/app/src/main/res/layout/item_catatan.xml
@@ -7,11 +7,11 @@
 
     <ImageView
         android:id="@+id/itemcatatan"
-        android:layout_width="52dp"
+        android:layout_width="10dp"
         android:layout_height="52dp"
         android:layout_gravity="top"
         android:scaleType="centerCrop"
-        android:src="@drawable/drawable_image_6" />
+        android:src="@drawable/loading9" />
 
     <TextView
         android:id="@+id/nama_catatan"
