--- a/app/src/main/res/layout/item_tabungan.xml
+++ b/app/src/main/res/layout/item_tabungan.xml
@@ -7,17 +7,19 @@
 
     <ImageView
         android:id="@+id/itemcatatan"
-        android:layout_width="52dp"
+        android:layout_width="10dp"
         android:layout_height="52dp"
         android:layout_gravity="top"
         android:scaleType="centerCrop"
-        android:src="@drawable/drawable_image_6" />
+        android:src="@drawable/loading9" />
 
     <TextView
         android:id="@+id/nama_tabungan"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:paddingStart="8dp"
         android:text="Nama Tabungan"
         android:textSize="16sp" />
 
