--- a/app/src/main/res/layout/activity_emas.xml
+++ b/app/src/main/res/layout/activity_emas.xml
@@ -7,6 +7,21 @@
     android:layout_height="match_parent"
     tools:context=".EmasActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingTop="16dp">
+
+        <ImageView
+            android:id="@+id/ijoijosaham"
+            android:layout_width="10dp"
+            android:layout_height="30dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/baremas"
+            android:layout_marginStart="5dp" />
+    </LinearLayout>
+
 
 
     <TextView
