--- a/app/src/main/res/layout/activity_intp_saham.xml
+++ b/app/src/main/res/layout/activity_intp_saham.xml
@@ -7,6 +7,21 @@
     android:layout_height="match_parent"
     tools:context=".namasaham.IntpSaham">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingTop="16dp">
+
+        <ImageView
+            android:id="@+id/ijoijosaham"
+            android:layout_width="10dp"
+            android:layout_height="52dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/loading9"
+            android:layout_marginStart="5dp" />
+    </LinearLayout>
+
     <TextView
         android:id="@+id/namasahama"
         android:layout_width="wrap_content"
