--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -149,7 +149,7 @@
         android:includeFontPadding="false"
         android:maxLines="1"
         android:singleLine="true"
-        android:text="Naufal"
+        android:text=""
         android:textColor="#FF000000"
         android:textSize="20dp" />
 
@@ -197,7 +197,7 @@
         android:includeFontPadding="false"
         android:maxLines="1"
         android:singleLine="true"
-        android:text="Naufal234@gmail.com"
+        android:text=""
         android:textColor="#FF000000"
         android:textSize="15dp" />
 
@@ -215,7 +215,7 @@
         android:includeFontPadding="false"
         android:maxLines="1"
         android:singleLine="true"
-        android:text="23/07/2000"
+        android:text=""
         android:textColor="#FF000000"
         android:textSize="15dp" />
 
@@ -231,7 +231,7 @@
         android:includeFontPadding="false"
         android:maxLines="1"
         android:singleLine="true"
-        android:text="Laki-Laki"
+        android:text=""
         android:textColor="#FF000000"
         android:textSize="15dp" />
 
